# salary-app

./: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: tests.yml
app/: auth.py  database.py  models.py  settings.py  utils.py
tests/: test_auth.py  test_database.py  test_utils.py  users.csv  utils.py
